set02/problem08_session.txt
**********************
Windows PowerShell transcript start
Start time: 20231024203629
Username: LAPTOP-HF3J6R39\sukhi
RunAs User: LAPTOP-HF3J6R39\sukhi
Configuration Name: 
Machine: LAPTOP-HF3J6R39 (Microsoft Windows NT 10.0.22621.0)
Host Application: C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe -noexit -command try { . "c:\Users\sukhi\AppData\Local\Programs\Microsoft VS Code\resources\app\out\vs\workbench\contrib\terminal\browser\media\shellIntegration.ps1" } catch {}
Process ID: 22336
PSVersion: 5.1.22621.2428
PSEdition: Desktop
PSCompatibleVersions: 1.0, 2.0, 3.0, 4.0, 5.0, 5.1.22621.2428
BuildVersion: 10.0.22621.2428
CLRVersion: 4.0.30319.42000
WSManStackVersion: 3.0
PSRemotingProtocolVersion: 2.3
SerializationVersion: 1.1.0.1
**********************
Transcript started, output file is c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Sukhith29\set02\problem08_session.txt
]633;E;Start-Transcript -Path "c:\x5cUsers\x5csukhi\x5cgithub-classroom\x5cFPC-advanced\x5cfpc-advanced-classroom-1st-year-assignment-Sukhith29\x5cset02\x5cproblem08_session.txt";1bc1b34e-af91-4bea-8b30-8802be3b2745]633;D;0]633;A]633;P;Cwd=C:\x5cUsers\x5csukhi\x5cgithub-classroom\x5cFPC-advanced\x5cfpc-advanced-classroom-1st-year-assignment-Sukhith29PS C:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Sukhith29> ]633;B
PS>gcc -g "c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Sukhith29\set02\problem08.c" -o "c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Sukhith29\set02\problem08.exe" 2>&1
gcc : c:\Users\sukhi\github-classroom\FPC-adv
anced\fpc-advanced-classroom-1st-year-assignm
ent-Sukhith29\set02\problem08.c: In function
'output':
At line:1 char:1
+ gcc -g "c:\Users\sukhi\github-classroom\FPC
-advanced\fpc-advanced-cla ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified:
   (c:\Users\sukhi\...ction 'output'::Strin
  g) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandE
   rror

c:\Users\sukhi\github-classroom\FPC-advanced\
fpc-advanced-classroom-1st-year-assignment-Su
khith29\set02\problem08.c:100:87: error:
expected ')' before 'smallest'
     printf("triangle with the smallest area
with base %f, altitude %f and area is %f
"smallest.base ,smallest.altitude ,
smallest.area);


^~~~~~~~
c:\Users\sukhi\github-classroom\FPC-advanced\
fpc-advanced-classroom-1st-year-assignment-Su
khith29\set02\problem08.c: In function
'main':
c:\Users\sukhi\github-classroom\FPC-advanced\
fpc-advanced-classroom-1st-year-assignment-Su
khith29\set02\problem08.c:108:5: warning:
implicit declaration of function
'input_n_triangle'
[-Wimplicit-function-declaration]
     input_n_triangle(n,triangles);
     ^~~~~~~~~~~~~~~~

]633;E;gcc -g "c:\x5cUsers\x5csukhi\x5cgithub-classroom\x5cFPC-advanced\x5cfpc-advanced-classroom-1st-year-assignment-Sukhith29\x5cset02\x5cproblem08.c" -o "c:\x5cUsers\x5csukhi\x5cgithub-classroom\x5cFPC-advanced\x5cfpc-advanced-classroom-1st-year-assignment-Sukhith29\x5cset02\x5cproblem08.exe" 2>&1;1bc1b34e-af91-4bea-8b30-8802be3b2745]633;D;1]633;A]633;P;Cwd=C:\x5cUsers\x5csukhi\x5cgithub-classroom\x5cFPC-advanced\x5cfpc-advanced-classroom-1st-year-assignment-Sukhith29PS C:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Sukhith29> ]633;B
PS>gcc -g "c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Sukhith29\set02\problem08.c" -o "c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Sukhith29\set02\problem08.exe" 2>&1

]633;E;gcc -g "c:\x5cUsers\x5csukhi\x5cgithub-classroom\x5cFPC-advanced\x5cfpc-advanced-classroom-1st-year-assignment-Sukhith29\x5cset02\x5cproblem08.c" -o "c:\x5cUsers\x5csukhi\x5cgithub-classroom\x5cFPC-advanced\x5cfpc-advanced-classroom-1st-year-assignment-Sukhith29\x5cset02\x5cproblem08.exe" 2>&1;1bc1b34e-af91-4bea-8b30-8802be3b2745]633;D;0]633;A]633;P;Cwd=C:\x5cUsers\x5csukhi\x5cgithub-classroom\x5cFPC-advanced\x5cfpc-advanced-classroom-1st-year-assignment-Sukhith29PS C:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Sukhith29> ]633;B
PS>c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Sukhith29\set02\problem08.exe
, altitude 2.00 and area is 2.00
]633;E;c:\x5cUsers\x5csukhi\x5cgithub-classroom\x5cFPC-advanced\x5cfpc-advanced-classroom-1st-year-assignment-Sukhith29\x5cset02\x5cproblem08.exe;1bc1b34e-af91-4bea-8b30-8802be3b2745]633;D;0]633;A]633;P;Cwd=C:\x5cUsers\x5csukhi\x5cgithub-classroom\x5cFPC-advanced\x5cfpc-advanced-classroom-1st-year-assignment-Sukhith29PS C:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Sukhith29> ]633;B
PS>git add .

]633;E;git add .;1bc1b34e-af91-4bea-8b30-8802be3b2745]633;D;0]633;A]633;P;Cwd=C:\x5cUsers\x5csukhi\x5cgithub-classroom\x5cFPC-advanced\x5cfpc-advanced-classroom-1st-year-assignment-Sukhith29PS C:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Sukhith29> ]633;B
PS>git commit -m "committed 10/24/2023, 8:38:28 PM"

]633;E;git commit -m "committed 10/24/2023, 8:38:28 PM";1bc1b34e-af91-4bea-8b30-8802be3b2745]633;D;1]633;A]633;P;Cwd=C:\x5cUsers\x5csukhi\x5cgithub-classroom\x5cFPC-advanced\x5cfpc-advanced-classroom-1st-year-assignment-Sukhith29PS C:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Sukhith29> ]633;B
PS>git push

]633;E;git push;1bc1b34e-af91-4bea-8b30-8802be3b2745]633;D;0]633;A]633;P;Cwd=C:\x5cUsers\x5csukhi\x5cgithub-classroom\x5cFPC-advanced\x5cfpc-advanced-classroom-1st-year-assignment-Sukhith29PS C:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Sukhith29> ]633;B
PS>Stop-Transcript
**********************
Windows PowerShell transcript end
End time: 20231024203838
**********************
